tests/ui/traits/method-private.stderr
error[E0624]: method `method` is private
  --> $DIR/method-private.rs:19:9
   |
LL |         fn method(&self) {}
   |         ---------------- private method defined here
...
LL |     foo.method();
   |         ^^^^^^ private method
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `Bar` which provides `method` is implemented but not in scope; perhaps you want to import it
   |
LL + use inner::Bar;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0624`.
